--- a/app/src/main/res/layout-land/activity_calc2.xml
+++ b/app/src/main/res/layout-land/activity_calc2.xml
@@ -45,6 +45,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:text="@string/cal2_btn_1"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -88,7 +89,7 @@
             android:id="@+id/btn_plus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="8dp"
             android:text="@string/cal2_btn_plus"
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/btn_9"
@@ -98,7 +99,7 @@
             android:id="@+id/btn_multi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="10dp"
             android:text="@string/cal2_btn_multi"
             android:textSize="20sp"
@@ -119,7 +120,7 @@
             android:id="@+id/btn_5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="8dp"
             android:text="@string/cal2_btn_5"
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/btn_4"
@@ -139,7 +140,7 @@
             android:id="@+id/btn_sub"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="8dp"
             android:text="@string/cal2_btn_sub"
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/btn_6"
@@ -169,12 +170,11 @@
             android:id="@+id/btn_8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="8dp"
             android:text="@string/cal2_btn_8"
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/btn_7"
             app:layout_constraintTop_toBottomOf="@+id/btn_5" />
-
 
         <Button
             android:id="@+id/btn_9"
@@ -185,16 +185,6 @@
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/btn_8"
             app:layout_constraintTop_toBottomOf="@+id/btn_6" />
-
-        <Button
-            android:id="@+id/btn_sqrt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="@string/cal2_btn_sqrt"
-            android:textSize="18sp"
-            app:layout_constraintStart_toEndOf="@+id/btn_ac"
-            app:layout_constraintTop_toBottomOf="@+id/btn_div" />
 
         <Button
             android:id="@+id/btn_0"
@@ -210,7 +200,7 @@
             android:id="@+id/btn_point"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="8dp"
             android:text="@string/cal2_btn_point"
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/btn_0"
@@ -220,42 +210,54 @@
             android:id="@+id/btn_mod"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="8dp"
             android:text="@string/cal2_btn_mod"
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/btn_div"
             app:layout_constraintTop_toBottomOf="@+id/btn_plus" />
 
         <Button
-            android:id="@+id/btn_del"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:text="@string/cal2_btn_del"
-            android:textSize="18sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_0" />
-
-        <Button
             android:id="@+id/btn_ac"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
 
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="50dp"
             android:text="@string/cal2_btn_ac"
             android:textSize="18sp"
-            app:layout_constraintStart_toEndOf="@+id/btn_del"
-            app:layout_constraintTop_toBottomOf="@+id/btn_point" />
+            app:layout_constraintStart_toEndOf="@+id/btn_sub"
+            app:layout_constraintTop_toTopOf="@+id/btn_del" />
+
+        <Button
+            android:id="@+id/btn_sqrt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="@string/cal2_btn_sqrt"
+            android:textSize="18sp"
+            app:layout_constraintStart_toEndOf="@+id/btn_plus"
+            app:layout_constraintTop_toBottomOf="@+id/btn_ac" />
 
         <Button
             android:id="@+id/btn_equals"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="8dp"
             android:text="@string/cal2_btn_equals"
             android:textSize="18sp"
-            app:layout_constraintStart_toEndOf="@+id/btn_sqrt"
-            app:layout_constraintTop_toBottomOf="@+id/btn_mod" />
+            app:layout_constraintStart_toEndOf="@+id/btn_mod"
+            app:layout_constraintTop_toBottomOf="@+id/btn_sqrt" />
+
+        <Button
+            android:id="@+id/btn_del"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/cal2_btn_del"
+            android:textSize="18sp"
+            app:layout_constraintStart_toEndOf="@+id/btn_multi"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
