--- a/app/src/main/res/layout/fragment_hint.xml
+++ b/app/src/main/res/layout/fragment_hint.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".assignment4.hangman.HintFragment">
+    tools:context=".assignment4.hangman.HintFragment"
+    android:id="@+id/hintFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <Button
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="hinthinthint" />
+        android:layout_height="50dp"
+        android:text="hint"
+        android:id="@+id/hintButton"/>
 
 </FrameLayout>
