--- a/app/src/main/res/layout/activity_criminal_intent.xml
+++ b/app/src/main/res/layout/activity_criminal_intent.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.fragment.app.FragmentContainerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".assignment4.cintent.CriminalIntentActivity">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:name="com.cs501.cs501app.assignment4.cintent.CrimeListFragment"
+    tools:context=".assignment4.cintent.CriminalIntentActivity" />
