--- a/app/src/main/res/layout/activity_hang_man.xml
+++ b/app/src/main/res/layout/activity_hang_man.xml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.fragment.app.FragmentContainerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".assignment4.hangman.HangManActivity">
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragment_container"
-        android:name="com.cs501.cs501app.assignment4.hangman.HintFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".assignment4.hangman.HangManActivity" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:name="com.cs501.cs501app.assignment4.hangman.ChooseLetterFragment"
+    tools:context=".assignment4.hangman.HangManActivity" />
