--- a/app/src/main/res/layout/fragment_hint.xml
+++ b/app/src/main/res/layout/fragment_hint.xml
@@ -1,15 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".assignment4.hangman.HintFragment"
-    android:id="@+id/hintFragment">
+    android:orientation="vertical"
+    tools:context=".assignment4.hangman.HintFragment">
+
+    <LinearLayout
+
+        android:layout_width="225dp"
+        android:layout_height="95dp"
+        android:layout_marginTop="608dp"
+        android:orientation="vertical"
+        android:padding="10dip"
+        android:id="@+id/hintFragment"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="104dp">
+
+        <TextView
+            android:id="@+id/hintText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="25dp"
+            android:text=""
+            android:textColor="@color/black"
+            android:textSize="25dp" />
+
+    </LinearLayout>
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="hint"
-        android:id="@+id/hintButton"/>
+        android:id="@+id/hintButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hint"
+        tools:layout_editor_absoluteX="165dp"
+        tools:layout_editor_absoluteY="550dp"
+        tools:ignore="MissingConstraints" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
