--- a/app/src/main/res/layout/fragment_hint.xml
+++ b/app/src/main/res/layout/fragment_hint.xml
@@ -3,8 +3,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context=".assignment4.hangman.HintFragment">
 
@@ -13,7 +13,6 @@
         android:id="@+id/hintFragment"
         android:layout_width="225dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="108dp"
         android:orientation="vertical"
         android:padding="10dip"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,8 +35,6 @@
         android:id="@+id/hintButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="108dp"
-        android:layout_marginTop="600dp"
         android:text="Hint"
         app:layout_constraintBottom_toTopOf="@id/hintText"
         app:layout_constraintStart_toStartOf="parent"
